[package]
name = "stdinout"
version = "0.4.0"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Simple wrapper for files or stdin/stdout."
documentation = "https://docs.rs/stdinout/"
homepage = "https://github.com/danieldk/stdinout"
repository = "https://github.com/danieldk/stdinout.git"
license = "Apache-2.0"
exclude = [
  ".gitignore"
]

[dependencies]
